Changelog for TimedMessages (v1.2.1-SNAPSHOT)

2012-07-29 16:49:53 +0100    implement metrics (James Richardson)
2012-07-29 16:33:48 +0100    sort members (James Richardson)
2012-07-29 16:33:12 +0100    update to latest bukkitutils (James Richardson)

v1.2.0
2012-06-16 01:02:05 +0100    preparing to release (James Richardson)
2012-06-15 21:18:15 +0100    Updated TimedMessages to use new updater (James Richardson)
2012-06-15 21:09:33 +0100    Coverting to new BukkitUtilities (James Richardson)

v1.1.2
2012-03-24 23:59:16 +0000    Build against latest BukkitUtilities Fixes possible MethodNotFoundException (James Richardson)
2012-03-03 19:06:54 +0000    fix spelling errors (James Richardson)
2012-03-03 19:03:44 +0000    removed references to simplestats (James Richardson)
2012-03-03 19:01:26 +0000    site configuration (James Richardson)

v1.1.1
2012-03-03 18:54:52 +0000    code clean up (James Richardson)
2012-03-03 18:52:49 +0000    prepare to release (James Richardson)
2012-03-03 18:48:26 +0000    fix time parsing fix missing key exception (James Richardson)
2012-03-03 18:31:43 +0000    fix logging plugin disabled twice (James Richardson)
2012-03-03 18:30:42 +0000    fix erronous output of startcommand (James Richardson)
2012-03-03 18:26:35 +0000    fix for TimeFormatter outputting 0 when it should raise an exception (James Richardson)
2012-03-03 18:22:56 +0000    allow console to use ALL commands (James Richardson)
2012-03-03 18:22:43 +0000    allow console to use commands (James Richardson)
2012-03-03 18:17:24 +0000    updated base classes (James Richardson)
2012-03-03 18:00:17 +0000    updated all commands (James Richardson)
2012-03-03 17:23:35 +0000    started to update to the latest recommended build (James Richardson)

v1.1.0
2012-02-11 15:33:37 +0000    preparing to release (James Richardson)
2012-02-11 15:24:07 +0000    update pom and add automatic versioning to plugin.yml (James Richardson)