@@ -5,14 +5,13 @@ no-timers: no timers
 one-timer: one timer
 many-timers: {0,number} timers
 timers-started: Starting {0} in {1,number} seconds.
-plugin-reloaded: {0} reloaded.
 
 # ReloadCommand
 reloadcommand.name: reload
 reloadcommand.description: Reload messages from the disk.
 reloadcommand.permission-description: Allow users to reload the messages from the disk.
 reloadcommand.usage:
-reloadcommand.plugin.reloaded: {0} reloaded.
+reloadcommand.plugin-reloaded: &GREEN{0} reloaded.
 
 # StartCommand
 startcommand.name: start
@@ -21,6 +20,10 @@ startcommand.permission-description: Allow users to start all timed messages.
 startcommand.usage: [inital_delay]
 startcommand.invalid-time: &REDInvalid time!
 startcommand.time-format-help: &YELLOWUse the following format: 5s = 5 seconds.
+startcommand.no-timers: no timers
+startcommand.one-timer: one timer
+startcommand.many-timers: {0,number} timers
+startcommand.timers-started: &YELLOWStarting &GREEN{0} &YELLOWin &GREEN{1,number} &YELLOWseconds.
 
 # StatusCommand
 statuscommand.name: status
